--- a/src/components/LandingPage/LandingPage.module.css
+++ b/src/components/LandingPage/LandingPage.module.css
@@ -9,7 +9,7 @@ html{
 }
 
 .landing{
-  background-image: url('../../images/joystick3_iphone2.jpg');
+  background-image: url('../../images/joystick3_desktop.jpg');
   background-size:cover;
   background-attachment:fixed;
   background-position: center;
@@ -27,22 +27,22 @@ html{
 
 .titulo{
   color: var(--color-red);
-  font-size: 3rem;
-  margin:2rem 0;
+  font-size: 8vw;
+  margin:2vw 0;
   margin-top: 20vh;
     
 }
 
 .henry{
   color: whitesmoke;
-  font-size: 2rem;
-  margin:2rem
+  font-size: 6vw;
+  margin:2vw
 }
 
 .pie{
   color: whitesmoke;
   position:fixed;
-  font-size: 1rem;
+  font-size: 3vw;
   bottom: 4vh;
   right: 2vw;
 }
@@ -56,8 +56,8 @@ html{
   cursor: pointer;
   display: inline-block;
   font-family: Arial,sans-serif;
-  font-size: 1.4rem;
-  height: 3rem;
+  font-size:4vw;
+  height: 5vw;
   outline: 0;
   padding: 0 1.1rem;
   text-align: center;
@@ -82,19 +82,19 @@ html{
 
 @media (min-width: 768px) {
   .landing{
-    background-image: url('../../images/joystick3_tablet.jpg');
+    background-image: url('../../images/joystick3_desktop.jpg');
+  }
+  .button{
+    font-size:2vw;
+    height: 3vw;
   }
   .titulo{
-    font-size: 4rem;
-    margin:3rem 0;
-    margin-top: 20vh;
-      
+    font-size: 6vw;
   }
-}
-
-
-@media (min-width: 1000px) {
-  .landing{
-    background-image: url('../../images/joystick3_desktop.jpg');
+  .henry{
+    font-size: 4vw;
+  }
+  .pie{
+    font-size: 1.5vw;
   }
 }
