--- a/src/components/DeleteGame/DeleteGame.module.css
+++ b/src/components/DeleteGame/DeleteGame.module.css
@@ -6,13 +6,13 @@
     cursor: pointer;
     display: inline-block;
     font-family: Arial,sans-serif;
-    font-size: 13px;
-    height: 22px;
+    font-size: 2vw;
+    height: auto;
     outline: 0;
     text-align: center;
     white-space: nowrap;
     transition: 0.4s;
-    margin-top: 1.6vw;
+    padding: 0.5vw
     
   }
   
@@ -21,4 +21,13 @@
     background-color: var(--color-red);
     color: #fff;
     
+  }
+
+  @media (min-width: 768px) {
+    .buttonX{
+      font-size: 1.3vw;
+      padding: 0.3vw;
+      height: 2vw;
+      margin-top: 1vw;
+    }
   }
