--- a/src/components/Paging/Paging.module.css
+++ b/src/components/Paging/Paging.module.css
@@ -8,9 +8,9 @@ $blue: #017ac7; */
 
 .pagination {
     text-align: center;
-    margin: 1em 0;
+    margin: 1vw 8vw;
 	display: inline-block;
-	height: 50px;
+	height: auto;
 	
 	background-color: transparent;
 
@@ -18,15 +18,15 @@ $blue: #017ac7; */
 
 .pageNumb {
 	display: block;
-	padding: 0 20px;
+	padding: 1.5vw;
 	float: left;
 	transition: 200ms;
 	color: #595959;
-	font-size: 16px;
+	font-size: 1.4vw;
     font-family: Arial,sans-serif;
 	letter-spacing: 0.1em;
-	line-height: 45px;
-    margin:0.1em;
+	line-height: auto;
+    margin:0.5vw;
     border-radius: 0.3em;
 
 }
@@ -39,15 +39,27 @@ $blue: #017ac7; */
 
 .actualPage{
     display: block;
-	padding: 0 20px;
+	padding: 1.5vw;
 	float: left;
+	transition: 200ms;
 	color: #595959;
-	font-size: 16px;
+	font-size: 1.4vw;
     font-family: Arial,sans-serif;
 	letter-spacing: 0.1em;
-	line-height: 45px;
-    margin:0.1em;
+	line-height: auto;
+    margin:0.5vw;
     border-radius: 0.3em;
     background-color: var(--color-blue-button);
 	color:  #fff;
 }
+
+@media (min-width: 768px) {
+    .pageNumb{
+    	padding: 0.8vw;
+		margin:0.2vw;
+    }
+    .actualPage{
+		padding: 0.8vw;
+		margin:0.2vw;
+    }
+  }
