--- a/src/components/FilterOrder/FilterOrder.module.css
+++ b/src/components/FilterOrder/FilterOrder.module.css
@@ -11,29 +11,26 @@ html{
 
 .filterGroup{
     display:flex;
-    margin-top:1vh;
+    margin:1vh 5vw;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 0.3vw;
     padding: 0.3vw;
-    margin-left: 20vw;
-    margin-right: 20vw;
 }
 
 .FilterOrder {
-    margin: 0.4vw;
+    margin: 0.6vh;
     padding: .3vw;
     border: 0;
     border-bottom: 2px solid currentcolor;
-    font: 1.3vw Arial,sans-serif;
+    font: 2vw Arial,sans-serif;
     letter-spacing: .1em;
     border-style: solid;
     border-width: 1px;
     border-radius: 0.6em;
     box-shadow: 0 0.5px 0.5px rgba(255,255,255,.1), 0 1px 0 #bbb, 0 2px 0 #aaa, 0 1px 1px #444;
     height: auto;
-    width: 50vw;
+    width: 24vw;
     
 }
 
@@ -77,20 +74,15 @@ html{
   }
 
   @media (min-width: 768px) {
-    .filterGroup{
-      flex-wrap: nowrap;
-      margin-left: 10vw;
-      margin-right: 10vw;
-    }
 
     .FilterOrder {
-      margin: 0.2vw;
-      padding: .2vw;
-      font: 1.2vw Arial,sans-serif;
+      margin: 0.7vw;
+      padding: 0.2vw;
+      font: 1.3vw Arial,sans-serif;
       height: auto;
-      width: 50vw;
+     
       
-  }
+    }
   
   .button {
       height: auto;
