--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -17,11 +17,10 @@ html{
   border-width: 1px;
   border-radius: 0.4rem;
   box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444;
-  margin: .6vw 20vw;
-  margin-left: 24.5vw;
+  margin: .6vw 5vw;
   padding: 0.3vw;
   border-color: whitesmoke;
-  width: 50vw;
+  width: 90vw;
   
 }
 
@@ -30,11 +29,10 @@ html{
   box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
   border-radius: 0.2em;
   color: #999;
-  float: left;
-  font: 1.5vw Arial,sans-serif;
+  font: 2vw Arial,sans-serif;
   height: auto;
   padding: .8vw;
-  width: 45vw;
+  width: 84vw;
 } 
 
 .SBinput:focus {
@@ -89,11 +87,15 @@ html{
 
 @media (min-width: 768px) {
 
+  .SBar {
+    margin: .6vw 5vw;
+    padding: 0.1vw;
+  }
+
   .SBinput {
-    font: 1.3vw Arial,sans-serif;
+    font: 1.5vw Arial,sans-serif;
     height: auto;
-    padding: .2vw;
-    width: 45vw;
+    padding: .1vw;
   } 
   
   .SBbutton {
