--- a/src/components/CreateGame/CreateGame.module.css
+++ b/src/components/CreateGame/CreateGame.module.css
@@ -126,7 +126,8 @@ html{
   display: flex;
   justify-content:space-evenly;
   text-align: left;
-  font-size: 2vw;  
+  font-size: 2vw;
+  margin-top: 2vw;  
 }
 
 .options{
@@ -311,7 +312,8 @@ html{
     justify-content:space-evenly;
     text-align: left;
     font-size: 1.5vw;
-    gap:1vw  
+    gap:1vw;
+    margin-top: 1vw;
   }
   
   .options{
