--- a/src/components/FilterOrder/FilterOrder.module.css
+++ b/src/components/FilterOrder/FilterOrder.module.css
@@ -31,6 +31,7 @@ html{
     box-shadow: 0 0.5px 0.5px rgba(255,255,255,.1), 0 1px 0 #bbb, 0 2px 0 #aaa, 0 1px 1px #444;
     height: auto;
     width: 24vw;
+    background-color: whitesmoke;
     
 }
 
